core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: causality
spec:
  selector:
    matchLabels:
      app: core
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: ghcr.io/causality-africa/core:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
