core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-svc
  namespace: causality
spec:
  type: ClusterIP
  selector:
    app: core
  ports:
    - name: "443"
      port: 443
      targetPort: 8080
